# GIAIC-mart

./: docker-compose.yaml
user-service/: .env  Dockerfile  pyproject.toml
user-service/app/: main.py  settings.py
user-service/app/controllers/crud/: user_crud.py
user-service/app/controllers/db/: index.py
user-service/app/controllers/jwt/: token.py
user-service/app/controllers/pwd/: pwd_context.py
user-service/app/models/: app_model.py  db_model.py
user-service/app/routes/: user_routes.py
